--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <script src="/coi-serviceworker.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>temp_app</title>
+  <title>IT Dashboard</title>
 </head>
 
 <body>
